Fix: delete duplicate column and del static var

--- a/video_generator/prototype_videogen.ipynb
+++ b/video_generator/prototype_videogen.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,24 +25,32 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## file_load"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('/opt/ml/final-project-level3-cv-04/result/0lXwMdnpoFQ/20/csv/pred.pickle', mode='rb') as f:\n",
+    "with open('/opt/ml/final-project-level3-cv-04/result/13aW5zJ832U/120/csv/pred.pickle', mode='rb') as f:\n",
     "    pred = pickle.load(f)\n",
     "\n",
-    "with open('/opt/ml/final-project-level3-cv-04/result/0lXwMdnpoFQ/20/csv/df1_face.pickle', mode='rb') as f:\n",
+    "with open('/opt/ml/final-project-level3-cv-04/result/13aW5zJ832U/120/csv/df1_face.pickle', mode='rb') as f:\n",
     "    df1 = pickle.load(f)\n",
     "\n",
-    "with open('/opt/ml/final-project-level3-cv-04/result/0lXwMdnpoFQ/20/0lXwMdnpoFQ.json', mode='r') as f:\n",
+    "with open('/opt/ml/final-project-level3-cv-04/result/13aW5zJ832U/120/13aW5zJ832U.json', mode='r') as f:\n",
     "    meta_info = json.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +206,7 @@
     "    return img, xmin, ymin, xmax, ymax\n",
     "\n",
     "\n",
-    "def moving_avg_untrackrow(df, keep_threshold):\n",
+    "def moving_avg_untrackrow(df, keep_threshold, meta_info):\n",
     "    df['increase_decrease_bbox'] = [None] * len(df)\n",
     "    df.at[0, 'increase_decrease_bbox'] = df.at[0, 'shift_bbox']\n",
     "    cnt=0\n",
@@ -206,7 +214,7 @@
     "    df['is_track_update'] = [False]*len(df)\n",
     "    for i in range(1, len(df)):\n",
     "        # if untrack case\n",
-    "        if df.at[i, 'shift_bbox'] == [0,0,2880,2160] and df.at[i, 'is_track'] == False:\n",
+    "        if df.at[i, 'shift_bbox'] == [0,0,meta_info['width'],meta_info['height']] and df.at[i, 'is_track'] == False:\n",
     "            # increase cnt\n",
     "            cnt+=1\n",
     "            if i > 0 and i < len(df) - 1:\n",
@@ -226,15 +234,21 @@
     "                df.at[i, 'increase_decrease_bbox'] = df.at[i-1, 'shift_bbox']\n",
     "        # if tracked appeared\n",
     "        else:\n",
-    "            # update short track_state\n",
+    "            # short_lange untrack case\n",
     "            if 0<cnt<keep_threshold:\n",
     "                for j in range(cnt):\n",
     "                    target_idx = i-(j+1)\n",
     "                    df.at[target_idx, 'increase_decrease_bbox'] = last_state\n",
     "                    df.at[target_idx, 'is_track_update'] = True # if short time state update\n",
+    "            # long_lange untrack case\n",
+    "                \n",
+    "            elif cnt>=keep_threshold:\n",
+    "                pass\n",
+    "            \n",
     "            cnt=0\n",
     "            df.at[i, 'increase_decrease_bbox'] = df.at[i, 'shift_bbox']\n",
     "            last_state=df.at[i, 'shift_bbox']\n",
+    "        \n",
     "    df['need_padding'] = df['is_track'] | df['is_track_update']\n",
     "    return df\n",
     "\n",
@@ -267,6 +281,7 @@
     "        else: # untracked\n",
     "            if mode == 'normal': \n",
     "                img = cv2.resize(img, dsize=(window_width, window_height), interpolation=cv2.INTER_CUBIC)\n",
+    "                xmin, ymin, xmax, ymax = 0, 0, window_width, window_height\n",
     "        # append\n",
     "        padded_box.append([xmin, ymin, xmax, ymax])\n",
     "        # if unmatching window img print size\n",
@@ -279,12 +294,19 @@
     "    return df, dir_path\n",
     "\n",
     "\n",
-    "def enlarge_with_padding(img, crop_width, crop_height, window_width, window_height, padding_tag):\n",
+    "def enlarge_with_padding(img, crop_width, crop_height, window_width, window_height, padding_tag, path):\n",
     "    if padding_tag == True:\n",
     "        padded_img = np.zeros((window_height, window_width, 3), dtype=np.uint8)\n",
     "        x_offset = int((window_width - crop_width) / 2)\n",
     "        y_offset = int((window_height - crop_height) / 2)\n",
-    "        padded_img[y_offset:y_offset+crop_height, x_offset:x_offset+crop_width, :] = img\n",
+    "        try:\n",
+    "           padded_img[y_offset:y_offset+crop_height, x_offset:x_offset+crop_width, :] = img\n",
+    "        except:\n",
+    "            print(f\"error occur in enlarge_with_padding, file:{path}\")\n",
+    "            print(\"input img size:\", img.shape)\n",
+    "            print(f\"window size: ({window_height}, {window_width})\" )\n",
+    "            print(\"so just resize\")\n",
+    "            padded_img = cv2.resize(img, (window_width, window_height), interpolation=cv2.INTER_CUBIC)\n",
     "    else:\n",
     "        padded_img = cv2.resize(img, (window_width, window_height), interpolation=cv2.INTER_CUBIC)\n",
     "    return padded_img\n",
@@ -319,7 +341,7 @@
     "        # enlarge_with_padding(img, crop_width, crop_height, window_width, window_height)\n",
     "        if tag == 'vertical' or tag=='horizontal':\n",
     "            # def enlarge_with_padding(img, crop_width, crop_height, window_width, window_height, padding_tag):\n",
-    "            img = enlarge_with_padding(img, crop_w, crop_h,window_width, window_height, padding_tag)\n",
+    "            img = enlarge_with_padding(img, crop_w, crop_h, window_width, window_height, padding_tag, path)\n",
     "        # if normal don't need post processing\n",
     "        out.write(img)\n",
     "    out.release()\n",
@@ -366,11 +388,12 @@
     "    # 4. get center_bbox(bbox center is key_point)\n",
     "    df['center_bbox'] = df['center_point'].apply(lambda x: keypoint_center_bounding_box(x, crop_height, crop_width))\n",
     "\n",
-    "    # 5. shifting bbox, if undetected keypoints or unmatching preds bbox is full\n",
+    "    # 5. shifting bbox, if undetected keypoints or unmatching preds bbox is [0, 0, meta_info['width'], meta_info['height']]\n",
     "    df['shift_bbox'] = df['center_bbox'].apply(lambda x: shift_bounding_box(x, shift_bb, meta_info))\n",
     "\n",
     "    # 6. extract selected member\n",
     "    df = df[df['name'] == member]\n",
+    "    print(f'after member select {len(df)} rows left.')\n",
     "\n",
     "    # 7. get all captures img filenames\n",
     "    img_dir_path = meta_info['image_root'].replace('.','..') # change for current path\n",
@@ -378,19 +401,24 @@
     "\n",
     "    # 8. add missing rows\n",
     "    df = add_missing_files(df, img_files, member, meta_info)\n",
+    "    print(f'after add missing_images {len(df)} rows left.')\n",
     "\n",
     "    # 9. tagging untracked frame\n",
     "    df['is_track'] = df['shift_bbox'].apply(lambda x: tagging_untrack_frame(x, meta_info))\n",
     "    \n",
     "    # 10. trim, drop useless column\n",
     "    df = trim(df)\n",
-    "\n",
+    "    \n",
     "    # 11. moving avg untrack row\n",
-    "    df = moving_avg_untrackrow(df, keep_threshold=meta_info['fps']) # df add column increase_decrease_bbox\n",
-    "\n",
+    "    df = moving_avg_untrackrow(df, meta_info['fps']*5, meta_info) # df add column increase_decrease_bbox\n",
+    "    \n",
     "    # option. smoothing\n",
     "    df = smoothing(df, 'increase_decrease_bbox') # df add column smoothed_bbox\n",
-    "\n",
+    "    \n",
+    "    # Remove duplicate rows in column A and keep the first occurrence\n",
+    "    df = df.drop_duplicates(subset='filename', keep='first')\n",
+    "    print(f'after del duplicates {len(df)} rows left.')\n",
+    "    \n",
     "    # 12. clip img for over bbox, if long untracked frame made by resume\n",
     "    df, crop_img_path = crop_resize_save_img(df, \n",
     "                                             img_dir_path, \n",
@@ -401,6 +429,8 @@
     "                                             crop_height, \n",
     "                                             crop_width, \n",
     "                                             mode)\n",
+    "    print(f'after clip {len(df)} rows left.')\n",
+    "\n",
     "    \n",
     "    # 13. making video\n",
     "    make_video(crop_img_path, df, meta_info, save_dir, window_height, window_width, member)\n",
@@ -412,165 +442,60 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "window size: hegiht:1080, width:1440\n",
-      "normal mode\n",
-      "start cropping 480 images.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "480it [00:39, 12.06it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "aespa_ningning's video recoding...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "480it [00:15, 30.46it/s]\n"
-     ]
-    }
-   ],
    "source": [
-    "# vertical\n",
-    "# video_gen(df1,  meta_info, 'aespa_ningning', pred, './', window_ratio=0.5, aespect_ratio=0.5, shift_bb=0.8).to_csv('result.csv') # asepect_ratio = width/height\n",
-    "\n",
+    "## video make"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### aespa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# normal\n",
     "video_gen(df1,  meta_info, 'aespa_ningning', pred, './', window_ratio=0.5, aespect_ratio=0., shift_bb=0.2).to_csv('result.csv') # asepect_ratio = width/height\n",
-    "\n",
+    "os.rename(\"./aespa_ningning_output.mp4\", \"./aespa_ningning_normal_w50as0shft20.mp4\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# vertical\n",
+    "video_gen(df1,  meta_info, 'aespa_ningning', pred, './', window_ratio=0.5, aespect_ratio=0.5, shift_bb=0.8).to_csv('result.csv') # asepect_ratio = width/height\n",
+    "os.rename(\"./aespa_ningning_output.mp4\", \"./aespa_ningning_vertical_w50as50shft80.mp4\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# horizontal\n",
-    "# video_gen(df1,  meta_info, 'aespa_ningning', pred, './', window_ratio=0.5, aespect_ratio=2, shift_bb=0.1).to_csv('result.csv') # asepect_ratio = width/height"
+    "video_gen(df1,  meta_info, 'aespa_ningning', pred, './', window_ratio=0.5, aespect_ratio=2, shift_bb=0.1).to_csv('result.csv') # asepect_ratio = width/height\n",
+    "os.rename(\"./aespa_ningning_output.mp4\", \"./aespa_ningning_horizontal_w50as200shft10.mp4\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "# create the sample data frame\n",
-    "df = pd.DataFrame({'shift_bbox': [[0,0,2880,2160], #1\n",
-    "                                  [100,200,300,400], #2\n",
-    "                                  [200,100,400,300], #3\n",
-    "                                  [0,0,2880,2160], #4\n",
-    "                                  [0,0,2880,2160], #5\n",
-    "                                  [0,0,2880,2160], #6\n",
-    "                                  [200,100,400,300], #7\n",
-    "                                  [0,0,2880,2160], #8\n",
-    "                                  [0,0,2880,2160], #9\n",
-    "                                  [100,200,300,400], #10\n",
-    "                                  [200,100,400,300], #11\n",
-    "                                  [0,0,2880,2160], #12\n",
-    "                                  [0,0,2880,2160], #13\n",
-    "                                  [100,200,300,400], #14\n",
-    "                                  [0,0,2880,2160]], #15\n",
-    "                    'is_track': [False, #1\n",
-    "                                 True, #2\n",
-    "                                 True, #3\n",
-    "                                 False, #4\n",
-    "                                 False, #5\n",
-    "                                 False, #6\n",
-    "                                 True, #7\n",
-    "                                 False, #8\n",
-    "                                 False, #9\n",
-    "                                 True, #10\n",
-    "                                 True, #11\n",
-    "                                 False, #12\n",
-    "                                 False, #13\n",
-    "                                 True, #14\n",
-    "                                 False]}) #15 \n",
-    "\n",
-    "print(df)\n",
-    "print('='*50)\n",
-    "df['increase_decrease_bbox'] = [None] * len(df)\n",
-    "df.at[0, 'increase_decrease_bbox'] = df.at[0, 'shift_bbox']\n",
-    "# iterate through each row in the data frame\n",
-    "cnt = 0\n",
-    "threshold = 3\n",
-    "last_state = None\n",
-    "for i in range(1, len(df)):\n",
-    "    # if the conditions are met\n",
-    "    if df.at[i, 'shift_bbox'] == [0,0,2880,2160] and df.at[i, 'is_track'] == False:\n",
-    "        # increase cnt\n",
-    "        cnt+=1\n",
-    "\n",
-    "        if i > 0 and i < len(df) - 1:\n",
-    "            # calculate the average of the previous and next values for each component of shift_bbox\n",
-    "            xmin = (df.at[i-1, 'shift_bbox'][0] + df.at[i+1, 'shift_bbox'][0]) / 2\n",
-    "            ymin = (df.at[i-1, 'shift_bbox'][1] + df.at[i+1, 'shift_bbox'][1]) / 2\n",
-    "            xmax = (df.at[i-1, 'shift_bbox'][2] + df.at[i+1, 'shift_bbox'][2]) / 2\n",
-    "            ymax = (df.at[i-1, 'shift_bbox'][3] + df.at[i+1, 'shift_bbox'][3]) / 2\n",
-    "            # update the values of shift_bbox in the current row\n",
-    "            df.at[i, 'increase_decrease_bbox'] = [xmin, ymin, xmax, ymax]\n",
-    "        elif i == 0:\n",
-    "            # if the current row is the first row, take the value of the next row\n",
-    "            df.at[i, 'increase_decrease_bbox'] = df.at[i+1, 'shift_bbox']\n",
-    "        else:\n",
-    "            # if the current row is the last row, take the value of the previous row\n",
-    "            df.at[i, 'increase_decrease_bbox'] = df.at[i-1, 'shift_bbox']\n",
-    "    \n",
-    "    else:\n",
-    "        if 0<cnt<threshold: # if threshold under\n",
-    "            print(i, cnt, df.at[i, 'shift_bbox'])\n",
-    "            for j in range(cnt):\n",
-    "                target_idx = i-(j+1)\n",
-    "                # print('target_idx', target_idx, last_state)\n",
-    "                df.at[target_idx, 'increase_decrease_bbox'] = last_state\n",
-    "\n",
-    "        # reset cnt\n",
-    "        cnt=0\n",
-    "        df.at[i, 'increase_decrease_bbox'] = df.at[i, 'shift_bbox']\n",
-    "        last_state = df.at[i, 'shift_bbox']\n",
-    "        \n",
-    "\n",
-    "# display the updated data frame\n",
-    "print(df)\n"
+    "### newjeans"
    ]
   },
   {
@@ -579,22 +504,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "from scipy.signal import savgol_filter    \n",
-    "\n",
-    "# noisy data\n",
-    "x = [6903.79, 6838.04, 6868.57, 6621.25, 7101.99, 7026.78, 7248.6, 7121.4, 6828.98, 6841.36, 7125.12, 7483.96, 7505.0, 7539.03, 7693.1, 7773.51, 7738.58, 8778.58, 8620.0, 8825.67, 8972.58, 8894.15, 8871.92, 9021.36, 9143.4, 9986.3, 9800.02, 9539.1, 8722.77, 8562.04, 8810.99, 9309.35, 9791.97, 9315.96, 9380.81, 9681.11, 9733.93, 9775.13, 9511.43, 9067.51, 9170.0, 9179.01, 8718.14, 8900.35, 8841.0, 9204.07, 9575.87, 9426.6, 9697.72, 9448.27, 10202.71, 9518.02, 9666.32, 9788.14, 9621.17, 9666.85, 9746.99, 9782.0, 9772.44, 9885.22, 9278.88, 9464.96, 9473.34, 9342.1, 9426.05, 9526.97, 9465.13, 9386.32, 9310.23, 9358.95, 9294.69, 9685.69, 9624.33, 9298.33, 9249.49, 9162.21, 9012.0, 9116.16, 9192.93, 9138.08, 9231.99, 9086.54, 9057.79, 9135.0, 9069.41, 9342.47, 9257.4, 9436.06, 9232.42, 9288.34, 9234.02, 9303.31, 9242.61, 9255.85, 9197.6, 9133.72, 9154.31, 9170.3, 9208.99, 9160.78, 9390.0, 9518.16, 9603.27, 9538.1, 9700.42, 9931.54, 11029.96, 10906.27, 11100.52, 11099.79, 11335.46, 11801.17, 11071.36, 11219.68, 11191.99, 11744.91, 11762.47, 11594.36, 11761.02, 11681.69, 11892.9, 11392.09, 11564.34, 11779.77, 11760.55, 11852.4, 11910.99, 12281.15, 11945.1, 11754.38]\n",
-    "\n",
-    "df = pd.DataFrame(dict(x=x))\n",
-    "x_filtered = df[[\"x\"]].apply(savgol_filter,  window_length=31, polyorder=2)\n",
-    "\n",
-    "plt.ion()\n",
-    "plt.plot(x)\n",
-    "plt.plot(x_filtered)\n",
-    "plt.show()"
+    "# normal\n",
+    "video_gen(df1,  meta_info, 'newjeans_minji', pred, './', \n",
+    "          window_ratio=0.4, aespect_ratio=0., shift_bb=0.1).to_csv('newjeans_smooth_normal_w40as0shft10.csv') # asepect_ratio = width/height\n",
+    "os.rename(\"./newjeans_minji_output.mp4\", \"./newjeans_smooth_normal_w40as0shft10.mp4\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# vertical\n",
+    "video_gen(df1,  meta_info, 'newjeans_minji', pred, './', \n",
+    "          window_ratio=0.5, aespect_ratio=0.7, shift_bb=0.4).to_csv('newjeans_smooth_vertical_w50as07shft40.csv') # asepect_ratio = width/height\n",
+    "os.rename(\"./newjeans_minji_output.mp4\", \"./newjeans_smooth_vertical_w50as07shft40.mp4\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# horizontal\n",
+    "video_gen(df1,  meta_info, 'newjeans_minji', pred, './', \n",
+    "          window_ratio=0.4, aespect_ratio=2, shift_bb=0.01).to_csv('newjeans_smooth_horizontal_w40as20shft1.csv') # asepect_ratio = width/height\n",
+    "os.rename(\"./newjeans_minji_output.mp4\", \"./newjeans_smooth_horizontal_w40as20shft1.mp4\")"
    ]
   }
  ],
